create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
 
     
 
@@ -249,7 +249,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">In-Class IMC Case:&nbsp;</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Designed intergrated &nbsp;marketing communication campaign for <em>HONOR</em>（learn more)</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Designed intergrated &nbsp;marketing communication campaign for <em>HONOR</em><em><br></em>（learn more)<br></p>
                     </div>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Research Project*Gephi:</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Collected data from <em>People's daily </em>with python.<em>&nbsp;</em>Made social network anaylsis with Gephi. (learn more)</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Collected data from <em>People's daily </em>with python.<em>&nbsp;</em>Made social network anaylsis with Gephi. <br>(learn more)</p>
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/wechatimg197-562x320.png" alt="Mobirise" title="">
+                        <img src="assets/images/wechatimg197-1-562x320.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Research Project*Tableau:</h4>
