--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="socicon socicon-smugmug mbr-iconfont mbr-iconfont-btn"></span>
-                    </a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Chengxi%20Jiang.pdf" target="_blank">Download CV</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
 
     
 
@@ -77,7 +76,7 @@
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7">Visual Artist ,Marketing Analyst and more on the way<br></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
                        <br>Chengxi (Carol) . Jiang</p>
-                    <p class="mbr-author-desc mbr-fonts-style display-7">- Bachelor of Arts, Major in Advertising, NanJing University<br>- Exchange program,The University of Manchester,UK<br>- Exchange program, Yale Summer Session&nbsp;<br>- Columbia SIPA, LSE MKT, Duke MPP, JHU MKT($5.4w &nbsp; &nbsp; &nbsp; scholarship) &nbsp;offer holder<br><br>- Contact me: chengxi0032@smail.nju.edu.com<br><br></p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">- Bachelor of Arts, Major in Advertising, NanJing University<br>- Exchange program,The University of Manchester,UK<br>- Exchange program, Yale Summer Session&nbsp;<br>- Columbia SIPA, LSE MKT, Duke MPP, JHU MKT($5.4w &nbsp;merit-based scholarship) &nbsp;offer holder<br><br>- Contact me: chengxi0032@smail.nju.edu.com<br><br></p>
             </div>
         </div>
     </div>
@@ -330,7 +329,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Research Project*Gephi:</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Collected data from <em>People's daily </em>with python.<em>&nbsp;</em>Made social network anaylsis with Gephi. <br>(learn more)</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Collected data from <em>People's daily </em>with python.<em>&nbsp;</em>Made&nbsp;social network anaylsis with Gephi. <br>(learn more)</p>
                     </div>
                 </div>
             </div>
