create github pages

--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
         </button>
         <div class="menu-logo">
             <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="https://mobirise.com">
-                         <img src="assets/images/cat-2-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
-                    </a>
-                </span>
+                
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
                         Carol Jiang<br></a></span>
             </div>
@@ -61,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="testimonials2 cid-rSMUahiG2z" id="testimonials2-9">
 
     
 
